[package]
name = "gst"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gstreamer = "0.18"
anyhow = "1.0.65"

[[bin]]
name = "m1"
path = "bins/module1.rs"

[[bin]]
name = "m2"
path = "bins/module2.rs"